--- a/game.html
+++ b/game.html
@@ -4,6 +4,7 @@
 </head>
 <body>
 	<script>
+		//Randomly selects Rock, Paper , or Scissors for the computer
 		function computerPlay(){
 			let random = Math.random()
 			let computer = ""
@@ -18,12 +19,51 @@
 			}
 			return computer
 		}
-		let choice=computerPlay()
-		console.log(choice)
-	//	function play(playerSelection, computerSelection){
+		//Determines which player wins
+		function playRound(playerSelection, computerSelection){
+			let condition = " "
+			if(playerSelection == "rock" || "Rock" || "ROCK"){
+				if(computerSelection == "rock"){
+					condition ="Both of you Tie!"
+				}
+				else if(computerSelection == "paper"){
+					condition = "You Lose!"
+				}
+				else if(computerSelection == "scissors"){
+					condition = "You Win!"
+				}
+			}
+			else if(playerSelection == "aper" || "Paper" || "PAPER"){
+				if(computerSelection == "rock"){
+					condition = "You Win!"
+				}
+				else if(computerSelection =="paper"){
+					condition = "Both of you tie!"
+				}
+				else if(computerSelection == "scissors"){
+					condition = "You Lose!"
+				}
+			}
+			else if(playerSelection == "scissors" || "Scissors" || "SCISSORS"){
+				if(computerSelection == "rock"){	
+					condition = "You Lose!"
+				}
+				else if(computerSelection == "paper"){
+					condition= "You Win!"
+				}
+				else if(computerSelection == "scissors"){
+					condition ="Both of you Tie!"
+				}
+			}
+		return condition		
+		}
+		let playerSelection = prompt("Please Enter 'Rock', 'Paper, or 'Scissors'")
+		let computerSelection = computerPlay()
+		console.log("Player: %s", playerSelection)
+		console.log("Computer: %s", computerSelection)
+		let result = playRound(playerSelection,computerSelection)	
+		console.log(result)
 		
-	//	}
-
 	</script>
 </body>
 
