--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					condition = "You Win!"
 				}
 			}
-			else if(playerSelection == "aper" || "Paper" || "PAPER"){
+			else if(playerSelection == "paper" || "Paper" || "PAPER"){
 				if(computerSelection == "rock"){
 					condition = "You Win!"
 				}
