--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		}
 		//Determines which player wins
 		function playRound(playerSelection, computerSelection){
-			let condition = " "
+			let condition = "Invalid"
 			if(playerSelection == "rock" || playerSelection == "Rock" || playerSelection == "ROCK"){
 				if(computerSelection == "rock"){
 					condition ="Both of you Tie!"
@@ -57,13 +57,47 @@
 			}
 		return condition		
 		}
+		function game(){
+			let playerPoints = 0
+			let compPoints = 0
+			for(let i=0;i<5;i++){
+				let playerSelection = prompt("Please Enter 'Rock', 'Paper, or 'Scissors'")
+				let computerSelection = computerPlay()
+				console.log("---Game %d---",i+1)
+				console.log("Player: %s", playerSelection)
+				console.log("Computer: %s", computerSelection)
+				let result = playRound(playerSelection,computerSelection)	
+				console.log(result)
+				if(result == "You Win!"){
+					playerPoints++
+				}
+				else if(result == "You Lose!"){
+					compPoints++
+				}
+				console.log("Player Points: %d", playerPoints)
+				console.log("Computer Points: %d" , compPoints)
+				console.log("--------------")
+			}	
+			if(playerPoints > compPoints){
+				console.log("Congratulations, You Win!")
+			}
+			else if(compPoints > playerPoints){
+				console.log("Unfortunately, You Lost!")
+			}
+			else{
+				console.log("Both of you have Tied!")
+			}
+
+		}
+		/*
 		let playerSelection = prompt("Please Enter 'Rock', 'Paper, or 'Scissors'")
 		let computerSelection = computerPlay()
 		console.log("Player: %s", playerSelection)
 		console.log("Computer: %s", computerSelection)
 		let result = playRound(playerSelection,computerSelection)	
 		console.log(result)
-		
+		*/
+		game()
 	</script>
 </body>
 
